--- a/root/boot/grub/grub.cfg
+++ b/root/boot/grub/grub.cfg
@@ -1,5 +1,7 @@
-set timeout = 15
-set default = 0
+set timeout=15
+set default=0
+
+echo "Fait totalement sans IA, wallah"
 
 menuentry "HorizonOS" {
 	multiboot 	/boot/kernel.elf
